--- a/thems/style-pro-dark.css
+++ b/thems/style-pro-dark.css
@@ -184,8 +184,8 @@ body {
 }
 
 .user-image img {
-  width: 640px;
-  height: 640px;
+  height: 200px;
+  margin-left: 30px;
   object-fit: cover;
 }
 
